<resources>
    <string name="app_name">SignUp_UI</string>
    <string name="sign_up">Sign Up Page</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="unique_id">Unique ID</string>
    <string name="already_a_user">Already a user</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="details">These are your details from our Database</string>
</resources>